added hover and active color and features

--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <div class="row which-row">3rd row</div>
-          <div class="row which-row">2nd row</div>
-          <div class="row which-row">1st row</div>
+          <div class="row which-row">3RD ROW</div>
+          <div class="row which-row">2ND ROW</div>
+          <div class="row which-row">1ST ROW</div>
+          <div class="row spin">Spin The Wheel</div>
         </div>
       </div>
       <div class="row"></div>
