--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/stylesheets/app.min.css">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="assets/javascripts/roulette.js"></script>
 </head>
 <body>
   <div id="board">
