added some styles to the page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link rel="stylesheet" href="assets/stylesheets/app.min.css">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="assets/javascripts/roulette.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="board">
     <div class="container-fluid">
       <div class="row">
+        <h1>PLAY ROULETTE</h1>
         <div class="col-sm-1 zero">0</div>
         <div class="col-sm-3">
           <div class="row">
