--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
   <title>
     Roulette
   </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/stylesheets/bootstrap.css">
   <link rel="stylesheet" href="assets/stylesheets/app.min.css">
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="assets/javascripts/jquery.js"></script>
   <script src="assets/javascripts/roulette.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="board">
     <div class="container-fluid">
+      <h1>PLAY ROULETTE</h1>
       <div class="row">
-        <h1>PLAY ROULETTE</h1>
-        <div class="col-sm-1 zero">0</div>
+        <div class="col-sm-1 first-col">
+          <div class="zero">0</div>
+          <div class="score">100</div>
+        </div>
         <div class="col-sm-3">
           <div class="row">
             <div class="col-sm-3 num red" data-digit="3">3</div>
