--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <div class="row">
         <div class="col-sm-1 first-col">
           <div class="zero">0</div>
-          <div class="score">100</div>
         </div>
         <div class="col-sm-3">
           <div class="row">
@@ -105,6 +104,10 @@
       </div>
     </div>
   </div>
+  <h2 class="welcome">Welcome to the Roulette Table!</h2>
+  <div class="score">5</div>
   <div class="preview"></div>
+  <div class="new-game">New Game</div>
+  <div class="clear-board">Clear Board</div>
 </body>
 </html>
