--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <div class="row">
         <div class="col-sm-1 first-col">
           <div class="zero">0</div>
-          <div class="score">100</div>
         </div>
         <div class="col-sm-3">
           <div class="row">
@@ -100,11 +99,26 @@
           <div class="row which-row">3RD ROW</div>
           <div class="row which-row">2ND ROW</div>
           <div class="row which-row">1ST ROW</div>
-          <div class="row spin">SPIN THE WHEEL</div>
+          <div class="row spin">CLICK FOR LUCKY NUMBER</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="preview"></div>
+  <div class="container-fluid" id="features">
+    <div class="title">
+      <h2>GAME INFORMATION</h2>
+    </div>
+    <div class="col-sm-6">
+      <div class="score">YOUR CURRENT SCORE IS = 100</div>
+      <div class="selections">YOUR CURRENT NUMBER OF SELECTIONS </div>
+      <div class="winnings">YOUR TOTAL WINNINGS/LOSSES ARE </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="preview"></div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </body>
 </html>
