--- a/index.html
+++ b/index.html
@@ -99,15 +99,35 @@
           <div class="row which-row">3RD ROW</div>
           <div class="row which-row">2ND ROW</div>
           <div class="row which-row">1ST ROW</div>
-          <div class="row spin">SPIN THE WHEEL</div>
+          <div class="row spin">CLICK FOR LUCKY NUMBER</div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="welcome">Welcome to the Roulette Table!</h2>
-  <div class="score">5</div>
-  <div class="preview"></div>
-  <div class="new-game">New Game</div>
-  <div class="clear-board">Clear Board</div>
+  <div class="container-fluid" id="features">
+    <div class="title">
+      <h2>GAME INFORMATION</h2>
+    </div>
+    <div class="col-sm-5">
+      <div class="score game-info">CURRENT SCORE IS: 100</div>
+      <div class="selections game-info">CURRENT NUMBER OF SELECTIONS: 0</div>
+      <div class="winnings game-info">WIN/LOSS: 0</div>
+    </div>
+    <div class="col-sm-2 info-links">
+      <div class="clear-board i-link">CLEAR BOARD</div>
+      <div class="new-game i-link">NEW GAME</div>
+      <a href="instructions.html" class= "ba">
+        <div class="instructions i-link">INSTRUCTIONS</div>
+      </a>
+      
+    </div>
+    <div class="col-sm-5">
+      <div class="preview">THE LUCKY NUMBER IS...</div>
+      <div class="answer"></div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </body>
 </html>
