--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="col-sm-5">
       <div class="score game-info">CURRENT SCORE IS: 100</div>
       <div class="selections game-info">CURRENT NUMBER OF SELECTIONS: 0</div>
-      <div class="winnings game-info">WIN/LOSS: 0</div>
+      <div class="winnings game-info">WIN/LOSS IN CURRENT GAME: 0</div>
     </div>
     <div class="col-sm-2 info-links">
       <div class="clear-board i-link">CLEAR BOARD</div>
