lucky number background

--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
       </a>
       
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-5 outcome">
       <div class="preview">THE LUCKY NUMBER IS...</div>
-      <div class="answer"></div>
+      <div class="answer-shell">
+        <p class="answer"></p>
+      </div>
     </div>
   </div>
 </div>
