--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <a href="instructions.html" class= "ba">
         <div class="instructions i-link">INSTRUCTIONS</div>
       </a>
-      
+      <p>CREATED BY SHENIL SHAH & ADIT MEHTA</p>
     </div>
     <div class="col-sm-5 outcome">
       <div class="preview">THE LUCKY NUMBER IS...</div>
