--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="row which-row">3RD ROW</div>
           <div class="row which-row">2ND ROW</div>
           <div class="row which-row">1ST ROW</div>
-          <div class="row spin">CLICK FOR LUCKY NUMBER</div>
+          <div class="row spin">SPIN WHEEL</div>
         </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
       <p>CREATED BY SHENIL & ADIT</p>
     </div>
     <div class="col-sm-5 outcome">
-      <div class="preview">THE LUCKY NUMBER IS...</div>
+      <div class="preview">THE NUMBER IS...</div>
       <div class="answer-shell">
         <p class="answer"></p>
       </div>
